@@ -30,13 +30,15 @@ integer(GADGET_SKIP_NON_HALO_PARTICLES, 1);
 integer(GADGET_HALO_PARTICLE_TYPE, 1);
 integer(RESCALE_PARTICLE_MASS, 0);
 
-real(TIPSY_LENGTH_CONVERSION, 1.0);
-real(TIPSY_VELOCITY_CONVERSION, 1.0);
-
+#ifdef ENABLE_HDF5
 integer(AREPO_ID_BYTES, 8);
 real(AREPO_MASS_CONVERSION, 1e10);
 real(AREPO_LENGTH_CONVERSION, 1e-3);
 integer(AREPO_DM_PARTTYPE, 1);
+#endif /* ENABLE_HDF5 */
+
+real(TIPSY_LENGTH_CONVERSION, 1.0);
+real(TIPSY_VELOCITY_CONVERSION, 1.0);
 
 integer(PARALLEL_IO, 0);
 string(PARALLEL_IO_SERVER_ADDRESS, "auto");
