@@ -1,8 +1,10 @@
 #ifndef _IO_AREPO_H_
 #define _IO_AREPO_H_
+#ifdef ENABLE_HDF5
 #include <stdint.h>
 #include "../particle.h"
 
 void load_particles_arepo(char *filename, struct particle **p, int64_t *num_p);
 
+#endif /* ENABLE_HDF5 */
 #endif /* _IO_AREPO_H_ */
